02-orquestacion/entregables/ejercicio3/todo-api-distributed-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-distributed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api-distributed
  template:
    metadata:
      labels:
        app: todo-api-distributed
    spec:
      containers:
      - image: todo-api-distributed:latest
        # Never Since I created the image locally:
        imagePullPolicy: Never
        name: todo-api-distributed
        resources:
          limits:
            cpu: 100m
            memory: 60Mi
          requests:
            cpu: 100m
            memory: 60Mi
        livenessProbe:
          httpGet:
            path: /live/
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
