02-orquestacion/entregables/ejercicio3/todo-api-distributed-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-distributed
spec:
  selector:
    app: todo-api-distributed
  ports:
    - protocol: TCP
      port: 3000
  type: ClusterIP
